--- a/.gitignore
+++ b/.gitignore
@@ -108,7 +108,7 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
-# yarn v2
+# yarn files
 .yarn/cache
 .yarn/unplugged
 .yarn/build-state.yml
